--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
     ],
     "require": {
         "php": ">=7.1",
+    },
+    "require-dev": {
         "phpunit/phpunit": "^7.5"
     },
     "autoload": {
